@@ -1,5 +1,5 @@
 GNU C Library NEWS -- history of user-visible changes.  2011-12-23
-Copyright (C) 1992-2012 Free Software Foundation, Inc.
+Copyright (C) 1992-2014 Free Software Foundation, Inc.
 See the end for copying conditions.
 
 Please send GNU C library bug reports via <http://sources.redhat.com/bugzilla/>
@@ -9,9 +9,9 @@ Version 2.15.1
 
 * The following bugs are resolved with this release:
 
-  411, 2547, 2548, 11261, 11365, 11494, 13583, 13731, 13732, 13733, 13747,
-  13748, 13749, 13753, 13754, 13771, 13773, 13774, 13786, 14048, 14059,
-  14167, 14273, 14459, 14621, 14648, 14040, 15073
+  411, 2547, 2548, 11261, 11365, 11494, 13583, 13618, 13731, 13732, 13733,
+  13747, 13748, 13749, 13753, 13754, 13756, 13771, 13773, 13774, 13786,
+  14048, 14059, 14167, 14273, 14459, 14621, 14648, 14040, 15073
 
 Version 2.15
 
